# autoprocess

./: .gitignore  README.md  autoprocess.py  batch_reprocess.py  mrc2tif.py  pyproject.toml  ser2tif.py
src/pyautoprocess/: __init__.py  autoprocess.py  batch_reprocess.py  image_process.py  monitor_ed.py  mrc2tif.py  quality_analyzer.py  ser2tif.py  tvips.py  tvips2tif.py
src/pyautoprocess/config/: __init__.py  config_manager.py  parameters.py
src/pyautoprocess/core/: __init__.py  file_handler.py  process_tracker.py  xds_manager.py
src/pyautoprocess/data/: bravais_lattices.json  microscope_configs.json
src/pyautoprocess/ui/: __init__.py  cli_parser.py  display_manager.py
src/pyautoprocess/utils/: __init__.py
src/pyautoprocess/workflows/: __init__.py
tests/ss-jacobsen-mov17/: .gitignore  test_ss_jacobsen_mov17.py
