[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyautoprocess"
version = "0.3.3"
authors = [
  { name="Dmitry Eremin", email="eremin@caltech.edu" },
  { name="Jessica Burch", email="hosea@caltech.edu" },
  { name="Sam Foxman", email="sfoxman@caltech.edu" },
]
description = "Automated processing and analysis of MicroED data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy~=2.0",
    "mrcfile~=1.5",
    "tifffile>=2025.1.10",
    "seremi==0.0.1",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
]

[project.scripts]
autoprocess = "pyautoprocess.autoprocess:main"
batch_reprocess = "pyautoprocess.batch_reprocess:main"
mrc2tif = "pyautoprocess.mrc2tif:main"
ser2tif = "pyautoprocess.ser2tif:main"
tvips2tif = "pyautoprocess.tvips2tif:main"
image_process = "pyautoprocess.image_process:main"

[project.urls]
Homepage = "https://github.com/theNelsonLab/autoprocess"
Issues = "https://github.com/theNelsonLab/autoprocess/issues"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyautoprocess"]
